<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Polygon Map Drawing</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="move_up">\u2191</string>
    <string name="move_dn">\u2193</string>
    <string name="move_rt">\u2192</string>
    <string name="move_lt">\u2190</string>
    <string name="move_del">Del</string>
    <string name="move_dis">dis</string>
    <string name="move_tap">no point selected</string>
    
    
</resources>
