<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <fragment
    android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    class="com.google.android.gms.maps.SupportMapFragment"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent" >

      <Button
          android:id="@+id/mUp"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:layout_marginRight="50dp"
          android:onClick="moveUp"
          android:text="@string/move_up" />
      <Button
          android:id="@+id/mDn"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:layout_marginRight="50dp"
          android:layout_marginTop="50dp"
          android:onClick="moveDn"
          android:text="@string/move_dn" />
      <Button
          android:id="@+id/mRt"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:layout_marginRight="0dp"
          android:layout_marginTop="50dp"
          android:onClick="moveRt"
          android:text="@string/move_rt" />
      <Button
          android:id="@+id/mLt"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:layout_marginRight="100dp"
          android:layout_marginTop="50dp"
          android:onClick="moveLt"
          android:text="@string/move_lt" />
      <TextView 
          android:id="@+id/tap_text"
          android:layout_alignParentTop="true"
          android:layout_alignParentLeft="true"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:text="@string/move_tap"/>
      <Button
          android:id="@+id/mDel"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_marginTop="50dp"
          android:onClick="doDelete"
          android:text="@string/move_del" />
      <Button
          android:id="@+id/mDis"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_marginTop="50dp"
          android:layout_marginLeft="50dp"
          android:onClick="doDis"
          android:text="@string/move_dis" />
  </RelativeLayout>
  
</LinearLayout>
